# schunk_lwa4p

./: README.rst
schunk_gripper_communication/: .package.xml.swp  CMakeLists.txt  bwood.sh  bwood_articulate_model_pow_format.txt  eef_poses.txt  exec.sh  init.sh  package.xml  setup.py  sim.sh  test_quats.sh
schunk_gripper_communication/config/: arm.srdf  controllers.yaml  fake_controllers.yaml  joint_limits.yaml  joint_names.yaml  kinematics.yaml  lwa4p.srdf  old_controller.yaml  ompl_planning.yaml  schunk_controller.yaml
schunk_gripper_communication/include/schunk/: set_schunk.h
schunk_gripper_communication/include/schunk_gripper_communication/: SchunkCanopenNode.h
schunk_gripper_communication/include/schunk_test/: schunk_test.h
schunk_gripper_communication/launch/: default_warehouse_db.launch  demo.launch  driver.launch  fake_moveit_controller_manager.launch.xml  init_schunk.launch  init_schunk2.launch  move_group.launch  move_to_home_position.launch  moveit.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ros_control.launch  run_benchmark_ompl.launch  schunk_moveit_controller_manager.launch  schunk_test.launch  sensor_manager.launch.xml  setup_assistant.launch  standalone_interpolated_position.launch  standalone_profile_position.launch  trajectory_execution.launch.xml  turtle_demo.launch  turtle_demo.launch~  visualize_arm_test.launch  warehouse.launch
schunk_gripper_communication/meshes/: Shorthollowcylinder.stl  cylinder-notop.dae
schunk_gripper_communication/msg/: Num.msg
schunk_gripper_communication/src/: .MoveToHomeNode.cpp.swp  .schunk_gripper_server.cpp.swp  MoveToHomeNode.cpp  SchunkCanopenHardwareInterface.cpp  SchunkCanopenNode.cpp  interactive_robot.cpp  points_and_lines.cpp  schunk_gripper_client.cpp  schunk_gripper_server.cpp  schunk_test.cpp  set_schunk.cpp
schunk_gripper_communication/srv/: schunk_gripper.srv
schunk_gripper_communication/urdf/: materials.urdf.xacro
schunk_gripper_communication/urdf/lwa4p/: arm.gv  arm.urdf  arm.urdf.xacro  lwa4p.urdf.xacro
schunk_gripper_communication/waypoints/: cactus.csv  cactus_box_values.txt  corrected_cactus.csv  corrected_medium_plant.csv  home.csv  medium_plant.csv  medium_plant_box_values.txt
