<?xml version="1.0"?>
<package format="2">
  <name>schunk_gripper_communication</name>
  <version>0.0.1</version>
  <description>The schunk_gripper_communication package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="johnshepherd@gwmail.gwu.edu">John S</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>actionlib</depend>
  <depend>control_msgs</depend>
  <depend>controller_manager</depend>
  <depend>fzi_icl_can</depend>
  <depend>fzi_icl_core</depend>
  <depend>hardware_interface</depend>
  <depend>joint_limits_interface</depend>
  <depend>joint_state_publisher</depend>
  <depend>message_generation</depend>
  <depend>message_runtime</depend>
  <depend>move_ros_move_group</depend>
  <depend>moveit_kinematics</depend>
  <depend>moveit_planners_ompl</depend>
  <depend>moveit_ros_visualization</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>robot_state_publisher</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>ros_controllers</depend>
  <depend>schunk_lwa4p</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>urdf</depend>
  <depend>xacro</depend>

  <!--
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  
  <exec_depend>actionlib</exec_depend>
  <exec_depend>control_msgs</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>fzi_icl_can</exec_depend>
  <exec_depend>fzi_icl_core</exec_depend>
  <exec_depend>hardware_interface</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>ros_controllers</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>xacro</exec_depend>
  --> 


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
